k8s/api-gateway.yaml
# Deployment
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: api-gateway-deployment     
  namespace: default
  labels:
    app: api-gateway
spec:
  replicas: 5
  selector:
    matchLabels:
      app: api-gateway

  # Pod template
  template:
    metadata:
      labels:
        app: api-gateway # Label for pods
    spec:
      containers:
      - name: api-gateway-container
        image: nigelnakajima/api_gateway:v1
        imagePullPolicy: IfNotPresent  # Uses local image cache if available
        # Environment variables passed to application
        resources:
          requests:                # Minimum guaranteed resources
            cpu: "100m"            # 100 millicores (0.1 CPU core)
            memory: "128Mi"
          limits:                  # Maximum allowed resources before throttling/restart
            cpu: "500m"            # 500 millicores (0.5 CPU core)
            memory: "512Mi"

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service                # DNS name used by other microservices to call this app
  namespace: default
spec:
  type: ClusterIP                  # Internal-only network access (Use 'NodePort' for Minikube testing)
  selector:
    app: api-gateway                # Routes incoming traffic to pods matching this label
  ports:
  - protocol: TCP
    port: 8008                     # Port other services call internally
    targetPort: 8008               # Port your application listens on
