k8s/database.yaml
# Deployment - Postgres Database
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: default
  labels:
    app: database
spec:
  replicas: 1                      # Single instance
  selector:
    matchLabels:
      app: database

  # Pod template
  template:
    metadata:
      labels:
        app: database              # Label for pods
    spec:
      containers:
      - name: database
        image: nigelnakajima/telco-database:v1
        ports:
        - containerPort: 5432
        
        # Environment variables passed to the postgres container
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
          
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "1024Mi"

      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
# Service - Database Internal DNS
apiVersion: v1
kind: Service
metadata:
  name: database                   # DNS name used by other microservices to call this app
  namespace: default
spec:
  type: ClusterIP                  # Internal-only network access
  selector:
    app: database                  # Routes incoming traffic to pods matching this label
  ports:
  - protocol: TCP
    port: 5432                     # Port other services call internally
    targetPort: 5432               # Port the database listens on
---
# Deployment - Flask API
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-service
  namespace: default
  labels:
    app: database-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-service

  # Pod template
  template:
    metadata:
      labels:
        app: database-service      # Label for pods
    spec:
      containers:
      - name: database-service
        image: nigelnakajima/telco-database-service:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8012
        
        # Environment variables passed to application
        resources:
          requests:                # Minimum guaranteed resources
            cpu: "100m"            # 100 millicores (0.1 CPU core)
            memory: "128Mi"
          limits:                  # Maximum allowed resources before throttling/restart
            cpu: "500m"            # 500 millicores (0.5 CPU core)
            memory: "512Mi"
---
# Service - Flask API Internal DNS
apiVersion: v1
kind: Service
metadata:
  name: database-service           # DNS name used by other microservices to call this app
  namespace: default
spec:
  type: ClusterIP                  # Internal-only network access
  selector:
    app: database-service          # Routes incoming traffic to pods matching this label
  ports:
  - protocol: TCP
    port: 8012                     # Port other services call internally
    targetPort: 8012               # Port your application listens on
